--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SIT722 - Glossary</title>
+  <title>SIT722:- Glossary</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         <td><%= item.id %></td>
         <td><%= item.term %></td>
         <td><%= item.definition %></td>
-        <td><a href="<%= item.references %>" target="_blank">Link</a></td>
+        <td><%= item.references %></td>
       </tr>
     <% } %>
   </table>
