index.ejs updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SIT722:- Glossary</title>
+  <title>SIT722 Software Deployment and Operation Unit Glossary</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
