--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
-  <h1>Glossary</h1>
+  <h1>SIT722 Glossary</h1>
   <table>
     <tr>
       <th>ID</th>
